bug: fixed animation on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -146,7 +146,11 @@ nav p#logo {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #fff;
+  /* background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(15px);
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  border-radius: 20px; */
   clip-path: polygon(0 50%, 100% 50%, 100% 50%, 0 50%);
 }
 
@@ -154,6 +158,7 @@ nav p#logo {
   text-align: center;
   width: 100%;
   font-size: 3rem;
+  color: #fff
 }
 
 .card .char span {
